# qie_research

./: .gitignore  CONTRIBUTING.md  EXECUTION_PLAN.md  MISSING.md  README.md  STRUCTURE.md  main.tex  paper_full.tex  pyproject.toml  render.sh  requirements-runpod.txt  requirements.txt  retry_failed.sh  run_full_sweep.sh  setup_runpod.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: experiment_run.yml  meeting_note.yml  phase_outcome.yml
Zipp/: main.tex  references.bib
configs/: breast_cancer.yaml  cifar10.yaml  covertype.yaml  credit_card_fraud.yaml  dry_bean.yaml  fashion_mnist.yaml  higgs.yaml  high_dim_parity.yaml  high_rank_noise.yaml  seed_registry.yaml  smoke_test.yaml  wine.yaml
data/: README.md
data/metadata/: dataset_manifest.json
docs/: attribution_decision.md  benchmark_execution_plan.md  experiments.md  governance.md  matched_budget_rules.md
docs/governance/: experiment_run_template.md  logging_protocol.md  peer_review_protocol.md  phase_outcome_matrix.md  phase_outcome_template.md  reference_library_maintenance.md  semantic_commit_guide.md
docs/reports/: phase_2_numerical_audit.tex
manuscript/: README.md
paper/: main.tex  references.bib
paper/sections/: abstract.tex  analysis.tex  appendix.tex  conclusion.tex  discussion.tex  introduction.tex  methods.tex  overhead.tex  related_work.tex  results.tex
records/: README.md
records/experiments/: data_encodings.py
records/phases/: phase-0-scope-lock.md  phase-1-infrastructure.md  (+3 more)
references/: README.md
results/: README.md
src/: README.md
tests/: test_determinism.py
(+172 files in other folders)
