[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qie-research"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scikit-learn>=1.8",
    "scipy>=1.17",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
